[package]
name = "addax_bot"
version = "0.1.0"
edition = "2018"

[dependencies]
serenity = {version = "0.10.9", features = [
    "builder",
    "client",
    "framework",
    "gateway",
    "http",
    "model",
    "standard_framework",
    "utils",
    "rustls_backend"] }
tokio = {version = "1.14.0", features = ["full"]}
songbird = {version = "0.2.0"}
log = { version = "0.4.14", features = ["std", "serde"] }
simplelog = { version = "0.11.0", features = ["paris"] }